--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,29 @@
 </head>
 <body>
 
+    <section class="header">
+        <div class="header__wrapper">
+
+            <div class="header__logo">
+                <img src="/img/icons/logo.svg" alt="header logo">
+            </div>
+
+            <ul class="header__menu">
+                <li class="header__menu-item">Home</li>
+                <li class="header__menu-item">Services</li>
+                <li class="header__menu-item">Pricing</li>
+                <li class="header__menu-item">FAQ</li>
+                <li class="header__menu-item">Contact Us</li>
+            </ul>
+
+            <div class="header__hamburger">
+                <span class="header__hamburger-bar"></span>
+                <span class="header__hamburger-bar"></span>
+                <span class="header__hamburger-bar"></span>
+            </div>
+        </div>
+    </section>
+
     <section class="hero">
         <div class="hero__wrapper">
             <h2 class="hero__title">Fast <span>delivery services</span> for B2B</h2>
