--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,69 @@
         </div>
     </section>
 
+    <section class="services">
+
+        <div class="services__circle">
+            <img src="../img/icons/circle.svg" alt="green circle">
+        </div>
+
+        <div class="services__wrapper">
+
+            <h3 class="services__title">Services</h3>
+            <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tellus nullam ultrices netus mauris, phasellus.</p>
+
+            <div class="services__items">
+                <div class="services__item">
+                    <div class="services__item-icon">
+                        <img src="../img/icons/street-delivery.svg" alt="street-delivery icon">
+                    </div>
+                    <h4 class="services__item-subtitle">Street Delivery</h4>
+                    <p class="services__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                </div>
+
+                <div class="services__item">
+                    <div class="services__item-icon">
+                        <img src="../img/icons/country-worldwide.svg" alt="country-worldwide icon">
+                    </div>
+                    <h4 class="services__item-subtitle">Contry and Worldwide</h4>
+                    <p class="services__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                </div>
+
+                <div class="services__item">
+                    <div class="services__item-icon">
+                        <img src="../img/icons/city-delivery.svg" alt="city-delivery icon">
+                    </div>
+                    <h4 class="services__item-subtitle">City Delivery</h4>
+                    <p class="services__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                </div>
+
+                <div class="services__item">
+                    <div class="services__item-icon">
+                        <img src="../img/icons/drone-delivery.svg" alt="drone-delivery icon">
+                    </div>
+                    <h4 class="services__item-subtitle">Drone Delivery</h4>
+                    <p class="services__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                </div>
+
+                <div class="services__item">
+                    <div class="services__item-icon">
+                        <img src="../img/icons/container-delivery.svg" alt="container-delivery icon">
+                    </div>
+                    <h4 class="services__item-subtitle">Container Delivery</h4>
+                    <p class="services__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                </div>
+
+                <div class="services__item">
+                    <div class="services__item-icon">
+                        <img src="../img/icons/real-time-tracking.svg" alt="real-time-tracking icon">
+                    </div>
+                    <h4 class="services__item-subtitle">Real time location trancking</h4>
+                    <p class="services__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
