--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,47 @@
         </div>
     </section>
 
+    <section class="work">
+        <div class="work__wrapper">
+            <h3 class="work__title">How it’s work</h3>
+            <p class="work__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tellus nullam ultrices netus mauris, phasellus.</p>
+
+            <div class="work__items">
+
+                <div class="work__item">
+                    <div class="work__item-icon">
+                        <img src="../img/icons/street-delivery.svg" alt="work street-delivery icon">
+                    </div>
+                    <div class="work__item-wrapper">
+                        <h4 class="work__item-title">Street Delivery</h4>
+                        <p class="work__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                    </div>
+                </div>
+
+                <div class="work__item">
+                    <div class="work__item-icon">
+                        <img src="../img/icons/city-delivery.svg" alt="work city-delivery icon">
+                    </div>
+                    <div class="work__item-wrapper">
+                        <h4 class="work__item-title">City Delivery</h4>
+                        <p class="work__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                    </div>
+                </div>
+
+                <div class="work__item">
+                    <div class="work__item-icon">
+                        <img src="../img/icons/country-worldwide.svg" alt="work country-worldwide icon">
+                    </div>
+                    <div class="work__item-wrapper">
+                        <h4 class="work__item-title">Country and Worldwide</h4>
+                        <p class="work__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices faucibus quis viverra facilisis pulvinar diam.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
