--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,127 @@
         </div>
     </section>
 
+    <section class="price">
+
+        <div class="price__circle">
+            <img src="../img/icons/circle.svg" alt="green circle">
+        </div>
+
+        <div class="price__wrapper">
+            <h3 class="price__title">Price</h3>
+            <p class="price__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non tellus nullam ultrices netus mauris, phasellus.</p> 
+            
+            <div class="price__items">
+
+                <div class="price__item">
+                    <h2 class="price__item-title">Basic</h2>
+                    <p class="price__item-price"><span class="h1">$49</span>/ month</p>
+                    <div class="price__item-benefits">
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                    </div>
+                    <button class="price__item-btn">Get Started</button>
+                </div>
+
+                <div class="price__item">
+                    <h2 class="price__item-title">Pro</h2>
+                    <div class="price__item-popular">
+                        <img src="../img/icons/popular-icon.svg" alt="popular status">
+                    </div>
+                    <p class="price__item-price"><span class="h1">$99</span>/ month</p>
+                    <div class="price__item-benefits">
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                    </div>
+                    <button class="price__item-btn">Get Started</button>
+                </div>
+
+                <div class="price__item">
+                    <h2 class="price__item-title">Premium</h2>
+                    <p class="price__item-price"><span class="h1">$128</span>/ month</p>
+                    <div class="price__item-benefits">
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                        <div class="price__item-benefit">
+                            <div class="price__item-check">
+                                <img src="../img/icons/check-icon.svg" alt="check icon">
+                            </div>
+                            <p class="price__item-benefit-title p-large">Local delivery</p>
+                            <p class="price__item-benefit-text p-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada</p>
+                        </div>
+                    </div>
+                    <button class="price__item-btn">Get Started</button>
+                </div>
+
+            </div>
+            
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
