--- a/src/index.html
+++ b/src/index.html
@@ -268,6 +268,67 @@
         </div>
     </section>
 
+
+    <section class="faq">
+        <div class="faq__circle">
+            <img src="../img/icons/circle-small.svg" alt="green circle-small">
+        </div>
+
+        <div class="faq__wrapper">
+
+            <h3 class="faq__title">Frequently asked questions</h3>
+
+            <div class="faq__items">
+                <div class="faq__item">
+                    <div class="faq__item-wrapper">
+                        <p class="faq__item-title p-large">How do i pay for the Basic or Premium plan?</p>
+                        <button class="faq__item-btn">+</button>
+                    </div>
+                    <p class="faq__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique viverra aliquet lectus morbi suspendisse pellentesque facilisis et. Duis volutpat at iaculis vitae at ut ultricies.</p>
+                </div>
+
+                <div class="faq__item">
+                    <div class="faq__item-wrapper">
+                        <p class="faq__item-title p-large">How can i cancel my Premium or Pro Plan?</p>
+                        <button class="faq__item-btn">+</button>
+                    </div>
+                    <p class="faq__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique viverra aliquet lectus morbi suspendisse pellentesque facilisis et. Duis volutpat at iaculis vitae at ut ultricies.</p>
+                </div>
+
+                <div class="faq__item">
+                    <div class="faq__item-wrapper">
+                        <p class="faq__item-title p-large">How do i pay for the Basic or Premium plan?</p>
+                        <button class="faq__item-btn">+</button>
+                    </div>
+                    <p class="faq__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique viverra aliquet lectus morbi suspendisse pellentesque facilisis et. Duis volutpat at iaculis vitae at ut ultricies.</p>
+                </div>
+
+                <div class="faq__item">
+                    <div class="faq__item-wrapper">
+                        <p class="faq__item-title p-large">How do i pay for the Basic or Premium plan?</p>
+                        <button class="faq__item-btn">+</button>
+                    </div>
+                    <p class="faq__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique viverra aliquet lectus morbi suspendisse pellentesque facilisis et. Duis volutpat at iaculis vitae at ut ultricies.</p>
+                </div>
+                
+                <div class="faq__item">
+                    <div class="faq__item-wrapper">
+                        <p class="faq__item-title p-large">How do i pay for the Basic or Premium plan?</p>
+                        <button class="faq__item-btn">+</button>
+                    </div>
+                    <p class="faq__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique viverra aliquet lectus morbi suspendisse pellentesque facilisis et. Duis volutpat at iaculis vitae at ut ultricies.</p>
+                </div>
+            </div>
+
+            <div class="faq__questions">
+                <p class="faq__questions-title p-large">Still have a questions ?</p>
+                <p class="faq__questions-text">if you cannot find answer to your question in our FAQ, you can always conact us. We will answer to you shortly!</p>
+            </div>
+
+        </div>
+
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
