--- a/src/index.html
+++ b/src/index.html
@@ -268,6 +268,23 @@
         </div>
     </section>
 
+    <section class="galery">
+        <div class="galery__wrapper">
+            <a href="#" class="galery__boat">
+                <h3 class="galery__boat-title">Fast Sea Delivery</h3>
+                <p class="galery__boat-subtitle">Volutpat enim sed urna nam ac ante.</p>
+            </a>
+            <a href="#" class="galery__plane">
+                <h3 class="galery__plane-title">Fast Sea Delivery</h3>
+                <p class="galery__plane-subtitle">Volutpat enim sed urna nam ac ante.</p>
+            </a>
+            <a href="#" class="galery__stock">
+                <h3 class="galery__stock-title">Fast Sea Delivery</h3>
+                <p class="galery__stock-subtitle">Volutpat enim sed urna nam ac ante.</p>
+            </a> 
+        </div>
+    </section>
+
 
     <section class="faq">
         <div class="faq__circle">
