--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,12 @@
                 <li class="header__menu-item">Pricing</li>
                 <li class="header__menu-item">FAQ</li>
                 <li class="header__menu-item">Contact Us</li>
+                <li class="header__menu-item">
+                    <label class="switch">
+                        <input type="checkbox" id="themeSwitch">
+                        <div class="slider round"></div>
+                    </label>
+                </li>
             </ul>
 
             <div class="header__hamburger">
